<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/light_blue"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/answer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/number2"
        android:hint="@string/enter_number"
        android:inputType="number"
        />
    <EditText
        android:id="@+id/number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/answer"
        app:layout_constraintLeft_toRightOf="@id/number1"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/enter_number"
        android:inputType="number"
        />

    <RadioGroup
        android:id="@+id/operators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/answer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_add"
            android:layout_width="wrap_content"
            android:text="@string/add"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            />
        <RadioButton
            android:id="@+id/radio_mult"
            android:text="@string/multiply"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/radio_sub"
            android:text="@string/subtract"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/radio_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/divide"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
    </RadioGroup>
    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/operators"
        android:text="@string/calculate"
        android:backgroundTint="#0a75ad"
        />


</androidx.constraintlayout.widget.ConstraintLayout>